--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         </intent>
     </queries>
     <application
-        android:name=".ads.Ads"
+        android:name=".ads.managers.AppOpenAdManager"
         android:label="@string/app_name"
         android:description="@string/app_short_description"
         android:appCategory="productivity"
