--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
-agp = "8.5.1"
+agp = "8.6.0"
 appcompat = "1.7.0"
 appUpdateKtx = "2.1.0"
-composeBom = "2024.06.00"
+composeBom = "2024.08.00"
 google-devtools-ksp = "2.0.0-1.0.23"
 coreKtx = "1.13.1"
 billing = "7.0.0"
 datastoreCore = "1.1.1"
-graphicsShapes = "1.0.0-rc01"
-hilt = "2.51.1"
+graphicsShapes = "1.0.0"
+hilt = "2.52"
 lifecycle = "2.8.4"
 kotlinxCoroutinesAndroid = "1.8.1"
 material = "1.12.0"
 multidex = "2.0.1"
 volley = "1.2.1"
-workRuntimeKtx = "2.9.0"
+workRuntimeKtx = "2.9.1"
 coreSplashscreen = "1.0.1"
-firebaseBom = "32.8.1"
+firebaseBom = "33.2.0"
 kotlin = "2.0.0"
 junit = "4.13.2"
 activityCompose = "1.9.1"
@@ -28,7 +28,7 @@ composeUi = "1.6.8"
 google-services = "4.4.2"
 google-oss-services = "0.10.6"
 google-firebase-crashlytics = "3.0.2"
-playServicesAds = "23.2.0"
+playServicesAds = "23.3.0"
 playServicesOssLicenses = "17.1.0"
 reviewKtx = "2.0.1"
 
